--- a/css/styles.css
+++ b/css/styles.css
@@ -151,7 +151,6 @@ nav {
   color: var(--color-title-background);
   font-family: "Raleway", sans-serif;
   font-size: 18px;
-  font-weight: ;
   line-height: 1.33;
   letter-spacing: 0.03em;
 }
@@ -319,6 +318,59 @@ nav {
   margin-right: 24px;
 }
 
+/* Footer */
+
+.footer-data {
+  display: flex;
+}
+
+.footer-list {
+  display: flex;
+}
+
+.social-media {
+  margin-left: 120px;
+}
+
+.social-media a {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-list > li {
+  width: 40px;
+  height: 40px;
+
+}
+
+.footer-data h4 {
+  margin: 0;
+  margin-bottom: 16px;
+  
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+}
+
+.footer-ico {
+  background-color: var(--hover-color);
+  border-radius: 50%;
+}
+
+.footer-list > li:hover {
+  background-color: #31D0AA;
+}
+
+.footer-ico:not(:last-child) {
+  margin-right: 16px;
+}
+
 .footer {
   padding-top: 100px;
   height: 310px;
@@ -436,15 +488,14 @@ nav {
   padding-bottom: 120px;
 }
 
-.person-href {
-  margin: 12px;
-}
-
 .ico-a {
-  height: 40px;
-  padding: 0;
-  margin: 0;
-  display: block;
+  display: flex;
+
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+
   border-radius: 50%;
 }
 
@@ -484,19 +535,20 @@ nav {
 }
 
 .partner > a {
-  width: 168px;
-  height: 88px;
-  display: block;
-  padding: 16px 32px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .partner:hover,
-.partner:focus{
+.partner:focus {
   border-color: var(--color-studio);
 }
 
-.svg-partner{
-  fill:#8e8f99
+.svg-partner {
+  fill: #8e8f99;
 }
 
 .svg-partner:focus,
