--- a/css/styles.css
+++ b/css/styles.css
@@ -343,13 +343,12 @@ nav {
 .footer-list > li {
   width: 40px;
   height: 40px;
-
 }
 
 .footer-data h4 {
   margin: 0;
   margin-bottom: 16px;
-  
+
   font-family: "Roboto";
   font-style: normal;
   font-weight: 600;
@@ -364,7 +363,7 @@ nav {
 }
 
 .footer-list > li:hover {
-  background-color: #31D0AA;
+  background-color: #31d0aa;
 }
 
 .footer-ico:not(:last-child) {
@@ -429,6 +428,14 @@ nav {
 
 .filter-item {
   margin-right: 20px;
+  border-radius: 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.filter-item:hover,
+.filter-item:focus {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .filter-item:last-child {
@@ -445,10 +452,15 @@ nav {
   justify-content: space-between;
 }
 
-.examples-works > li {
+.item-works {
   margin-bottom: 48px;
-  border-bottom: 0.5px solid #f4f4fd;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+.item-works:hover,
+.item-works:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .text-works {
