--- a/css/styles.css
+++ b/css/styles.css
@@ -548,6 +548,7 @@ nav {
 }
 
 .partner > a {
+  color: #8E8F99;
   width: 100%;
   height: 100%;
   display: flex;
@@ -560,8 +561,13 @@ nav {
   border-color: var(--color-studio);
 }
 
+.partner a:hover ,
+.partner a:focus {
+  color: var(--color-studio);
+}
+
 .svg-partner {
-  fill: #8e8f99;
+  fill: currentColor;
 }
 
 .svg-partner:focus,
